--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Mikemupararano.github.io/react-render-multiple-images",
   "scripts": {
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist",
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
